--- a/10f.html
+++ b/10f.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="10f.css">
     <title>My-Calculator</title>
   </head>
   <body>
+    <div class="bigbox">
+
     <h1>Developed by Khushi Jain</h1>
     <h1 id="title">Calculator</h3>
 
-    <div class="bigbox">
+    <div>
     <p class="js-visible visible"></p>
 
     <p>
@@ -93,7 +96,7 @@
       " class="clear-button">Clear</button>
     </p>
     </div>
-
+    </div>
     <script src="10f.js"></script>
 
   </body>
